# aegis

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml  turbo.json
apps/ai-engine/: config.py  main.py  pyproject.toml  requirements.txt
apps/ai-engine/agents/: __init__.py  analyzer.py  investigator.py  orchestrator.py  remediator.py
apps/ai-engine/cli/: __init__.py  main.py  panic.py
apps/ai-engine/connectors/: README.md  __init__.py  alert_fetcher.py  config.py  log_fetcher.py  metric_fetcher.py  mock_server.py  models.py  signoz_client.py  trace_fetcher.py
apps/ai-engine/connectors/pattern_analyzer/: README.md  __init__.py  analyzer.py  correlation.py  message_clustering.py  report.py  time_patterns.py
apps/ai-engine/connectors/pattern_analyzer/tests/: fixtures.py  test_analyzer.py  test_correlation.py  test_message_clustering.py  test_time_patterns.py
apps/ai-engine/connectors/tests/: conftest.py  test_alert_fetcher.py  test_log_fetcher.py  test_metric_fetcher.py  test_signoz_client.py  test_trace_fetcher.py
apps/ai-engine/control_tower/: README.md  __init__.py  action.py  api.py  config.py  context_builder.py  investigation.py  modes.py  orchestrator.py
apps/ai-engine/control_tower/tests/: conftest.py  test_api.py  test_context_builder.py  test_investigation_model.py  test_modes.py  test_orchestrator.py
apps/ai-engine/executor/: README.md  __init__.py  api.py  audit.py  config.py  executor.py  result.py
apps/ai-engine/executor/tests/: conftest.py  test_executor.py
apps/ai-engine/executor/wrappers/: __init__.py  aws.py  base.py  kubectl.py  terraform.py
apps/ai-engine/guardrails/: README.md  __init__.py  approval.py  audit.py  engine.py  policy.py  risk.py  tiers.py
apps/ai-engine/guardrails/policies/: default.yaml
apps/ai-engine/guardrails/tests/: conftest.py  test_approval.py  test_engine.py  test_policy.py  test_risk.py
apps/ai-engine/guardrails/tests/policies/: test_policy.yaml
apps/ai-engine/honeytokens/: README.md  __init__.py  alert.py  config.py  generator.py  registry.py  scanner.py  seeder.py
apps/ai-engine/honeytokens/tests/: test_generator.py  test_scanner.py  test_seeder.py
apps/ai-engine/invalidation/: __init__.py  dependency_index.py  engine.py  metrics.py  models.py  resynth_queue.py
apps/ai-engine/invalidation/tests/: conftest.py  test_dependency_index.py  test_engine.py  test_metrics.py  test_resynth_queue.py
apps/ai-engine/killswitch/: KILLSWITCH.md  __init__.py  aws_revoke.py  config.py  gate.py  switch.py
apps/ai-engine/killswitch/tests/: conftest.py  test_cli.py  test_gate.py  test_switch.py
apps/ai-engine/llm_router/: README.md  __init__.py  config.py  router.py  sensitivity.py
apps/ai-engine/llm_router/backends/: __init__.py  claude.py  ollama.py
apps/ai-engine/llm_router/tests/: __init__.py  test_ollama_client.py  test_router.py  test_sensitivity.py
apps/ai-engine/mcp/: SCOPING.md  __init__.py  manifest.py  scope_config.py  scoped_tool.py  server.py
apps/ai-engine/mcp/tests/: __init__.py  conftest.py  test_docs_tools.py  test_injection_resistance.py  test_manifest.py
apps/ai-engine/mcp/tools/: __init__.py  infrastructure.py  observability.py  workflow.py
apps/ai-engine/mcp/tools/blocked/: __init__.py  kubectl_delete.py  terraform_apply.py
apps/ai-engine/mcp/tools/read/: __init__.py  _docs_runtime.py  docs_find.py  log_search.py  (+5 more)
apps/ai-engine/models/: __init__.py  analysis.py  incident.py  logs.py
apps/ai-engine/proxy/: README.md  __init__.py  config.py  detector.py  mapper.py  proxy.py
apps/ai-engine/proxy/tests/: conftest.py  test_detector.py  test_mapper.py  test_proxy.py
apps/ai-engine/reconciliation/: README.md  __init__.py  drift.py  models.py  reconciler.py  sources.py
apps/ai-engine/reconciliation/tests/: conftest.py  test_drift.py  test_reconciler.py  test_sources.py
apps/ai-engine/routers/: __init__.py  analyze.py  health.py  investigate.py  logs.py  mcp.py  wiki.py
apps/ai-engine/scheduler/: README.md  __init__.py  api.py  config.py  history.py  jobs.py  runner.py  scheduler.py
apps/ai-engine/scheduler/tests/: conftest.py  test_api.py  test_config.py  test_history.py  test_jobs.py  test_runner.py  test_scheduler.py
apps/ai-engine/services/: __init__.py  token_tracker.py
apps/ai-engine/state_subscription/: __init__.py  models.py  subscriber.py
apps/ai-engine/state_subscription/consumers/: __init__.py  k8s.py
apps/ai-engine/state_subscription/tests/: conftest.py  test_k8s_consumer.py  test_models.py
apps/ai-engine/telemetry/: README.md  __init__.py  config.py  llm_spans.py  mcp_spans.py  setup.py
apps/ai-engine/telemetry/tests/: __init__.py  conftest.py  test_llm_spans.py  test_mcp_spans.py
apps/ai-engine/wiki/: __init__.py  confluence_sync.py  contradiction.py  engine.py  ingester.py  publisher.py  signoz_sync.py  staleness.py  synthesizer.py
apps/ai-engine/wiki/tests/: test_synthesizer.py
(+285 files in other folders)
