[project]
name = "aegis-ai-engine"
version = "0.1.0"
description = "AI-Native DevSecOps Command Center — AI Engine"
requires-python = ">=3.12"
license = "MIT"
readme = "README.md"
authors = [
    { name = "Aegis Contributors" },
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "anthropic>=0.42.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "typer>=0.12.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
# Microsoft Presidio is an optional, heavier dependency pulled in only when
# higher-precision PII detection (person names, phone numbers, credit cards)
# is desired. The proxy degrades cleanly to regex-only when it is absent.
presidio = [
    "presidio-analyzer>=2.2.0",
]
aws = ["boto3>=1.34.0"]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "fakeredis>=2.20.0",
]

[project.scripts]
aegis = "cli.main:run"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "mcp*", "models*", "proxy*", "routers*", "killswitch*", "cli*", "services*", "wiki*", "telemetry*", "guardrails*", "connectors*", "reconciliation*"]

[tool.pytest.ini_options]
testpaths = [
    "proxy/tests",
    "killswitch/tests",
    "honeytokens/tests",
    "telemetry/tests",
    "mcp/tests",
    "guardrails/tests",
    "connectors/tests",
    "reconciliation/tests",
]
pythonpath = ["."]
